Fixed delayed audio on mobile & Chrome Android focus outline

--- a/src/css/_components.scss
+++ b/src/css/_components.scss
@@ -85,6 +85,11 @@
     background: yellow;
 }
 
+#next-color {
+    box-shadow: none;
+    outline: none;
+}
+
 .keyboard-focus #next-color:focus {
     box-shadow: 0 0 20px #00bdbb inset;
 }
